main content + footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -42,6 +49,44 @@
           <a href="./where.html" class="btn btn-primary my-10">DECOUVRIR</a>
         </div>
       </section>
+      <section class="features">
+        <div class="contenair">
+          <div class="feature">
+            <i class="fa-solid fa-coffee fa-3x my-10"></i>
+            <h2>Un nouveau café par jour</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+              aliquid neque in sint reiciendis adipisci laboriosam obcaecati
+              recusandae magnam excepturi!
+            </p>
+          </div>
+          <div class="feature">
+            <i class="fa-solid fa-clock fa-3x my-10"></i>
+            <h2>ouvert 24/24 7j/7</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo,
+              natus voluptas! Consectetur neque, eos repudiandae nobis maxime
+              eligendi placeat quaerat.
+            </p>
+          </div>
+        </div>
+      </section>
+      <div class="person"></div>
+      <section class="reservation">
+        <div class="contenair">
+          <h2>Reservez des maintenant</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, nam
+            cumque doloremque incidunt eveniet dolorum odio recusandae? Dolorum
+            placeat temporibus pariatur, praesentium tempore eius, reprehenderit
+            consectetur ad expedita quas hic.
+          </p>
+          <a href="./contact.html" class="btn btn-dark my-20">RESERVEZ</a>
+        </div>
+      </section>
+      <footer>
+        <p>Copyright &#169 - café Florette - 2024</p>
+      </footer>
     </main>
   </body>
 </html>
