--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,20 @@
       </nav>
     </header>
     <main>
-      
-      
+        <section class="contact">
+            <div class="contact-form-container">
+                <form action="#">
+                  <h1 class="underline">Une question ? Contactez nous</h1>
+                  <label class="my-20" for="name">Nom</label>
+                  <input type="text" name="name" id="name" />
+                  <label class="my-20" for="email">Email</label>
+                  <input type="email" name="email" id="email" />
+                  <label class="my-20" for="question">Questions et remarques</label>
+                  <textarea name="question" id="question"></textarea>
+                  <button class="btn btn-dark my-20">SOUMETTRE</button>
+                </form>
+            </div>
+        </section> 
     </main>
     <footer>
         <p>Copyright &#169 - café Florette - 2024</p>
