--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" media ="only screen and (max-width:500px)" href="./css/style-mobile.css">
   </head>
   <body>
     <header class="header">
